# OverTheWire-website

./: .gitignore  CNAME  ChangeBandit22->23  FOOTER.shtml  GLOBALHEADER.shtml  LICENSE  MORETODO  README.md  STARTCONTENT.shtml  TODO  games.json  index.html  index.shtml  index.shtml.bak  pyproject.toml
_includes/: about.md  beginNote.html  games.md  help.md  information.md  menu_item.html  news.md  otwuserdir.html  patreonlist.md  showFile.html  warzone.md
_layouts/: default.html
about/: LOCALHEADER.shtml  contact.md  contact.shtml  contribute.shtml  index.md  index.shtml  us.md  us.shtml  wechall.md  wechall.shtml
css/: origins.readme.txt  patreon.css  style.css  wechall.css
help/: index.md  sshinfra.md  userdata.md  wechall.md
img/: ATTRIBUTION
information/: alumni.md  chat.md  contact.md  donate.md  irc.md  news.md  sshinfra.md  staff.md  userdata.md  website.md  wechall.md
js/: otwcrap.js  resizehandler.js  updatedmarkers-logic.js  updatedmarkers.js  wechall-data.json  wechall.js
news/: ENDCONTENT.shtml  LOCALHEADER.shtml  index.md  index.shtml  news.shtml
patreon/: patreon.py  patrons.json  update_patreonlist.sh
projects/: LOCALHEADER.shtml  STARTCONTENT.shtml  index.shtml
rules/: index.md
status/: test.html
status/test_files/: app.js.download  style.css
wargames/: LOCALHEADER.shtml  index.md  index.shtml  ml
wargames/abraxas/: index.md  index.shtml  instructions.txt
wargames/bandit/: SIDEMENU.shtml  bandit0.md  bandit0.shtml  bandit1.md  bandit1.shtml  bandit10.md  bandit2.md  (+59 more)
warzone/: advent2018.md  connect.md  index.md  tsutomu.md
(+446 files in other folders)
